fix navbar z-indexing and some cleanup

--- a/src/components/NavBarComponent.css
+++ b/src/components/NavBarComponent.css
@@ -2,10 +2,13 @@
 	padding: 8px;
 }
 
+#navbar-main {
+	z-index: 1000;
+}
+
 #navbar-hidden-overlay {
-	position: absolute;
+	position: fixed;
+	z-index: 999;
 	width: 100%;
-	/* TODO: retrieve final size (after animation completes) instead of hard-coding it */
-	height: calc(100vh - 256px);
-	z-index: 10000;
+	height: 100%;
 }
